--- a/myapp/react-app/src/component/Gallery/css/Gallerydetail.css
+++ b/myapp/react-app/src/component/Gallery/css/Gallerydetail.css
@@ -14,6 +14,7 @@
   display: grid;
   grid-template-columns: 400px;
   grid-template-rows: 60px 400px 50px 30px 140px;
+  border-radius: 15px;
 }
 
 .gheader {
