--- a/myapp/react-app/src/component/Festival/css/Peak.css
+++ b/myapp/react-app/src/component/Festival/css/Peak.css
@@ -12,7 +12,7 @@
   position: relative;
   display: inline-block;
   width:900px;
-  min-height: 3500px;
+  min-height: 3000px;
   height:auto;
   background-color: #008739;
 }
@@ -288,6 +288,19 @@ color:black;
   background-image: url(../img/photo6.jpg);
   background-size: cover;
 }
+.Peak-map-box{
+  position: absolute;
+  display: inline-block;
+  width:900px;
+  height:600px;
+  top:3115px;
+  right:395px;
+}
+.peak-map{
+  width:900px;
+  height:500px;
+}
+  
 
 
 
