디폴트이미지설정, 내글목록 라이크 카운트 수정

--- a/myapp/react-app/src/component/Festival/css/Nightmarket.css
+++ b/myapp/react-app/src/component/Festival/css/Nightmarket.css
@@ -18,7 +18,7 @@
   position: relative;
   display: inline-block;
   width:900px;
-  border:1px solid red;
+  /* border:1px solid red; */
   min-height: 1800px;
   height:auto;
   background : rgba(14,14,14,0.99);
