--- a/myapp/react-app/src/component/Mypage/css/Intromodal.css
+++ b/myapp/react-app/src/component/Mypage/css/Intromodal.css
@@ -225,6 +225,7 @@ div.modal-body {
   right: 105px;
   bottom: 470px;
   display: inline-block;
+  border:0px solid;
 
   /* box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2); */
   border-radius: 120px;
@@ -237,6 +238,7 @@ div.modal-body {
   width:260px;
   height:260px;
   border-radius: 125px;
+  border:0px solid;
 }
 .introprofile-preview-image-box span{
   position: absolute;
@@ -258,8 +260,10 @@ div.modal-body {
   position: relative;
   display: inline-block;
   bottom:70px;
+  
 }
 .introprofile-preview-image{
   position: relative;
+  border:0px solid;
 }
 
